2010-02-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Presume availability of `fputs'.

	* rcslex.c (aputs): Move code out
	of #if has_fputs; delete #else block.
	* conf.sh: Remove check for `fputs'.

2010-02-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move checks for GCC __attribute__ handling to configure.in

	* conf.sh: Remove checks for GCC attributes `noreturn' and
	`format_printf'; use `GCC_HAS_ATTRIBUTE_NORETURN' and
	`GCC_HAS_ATTRIBUTE_FORMAT' from auto-sussed.h directly.

2010-02-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Assume `EXIT_FAILURE' works.

	* conf.sh: Remove check for `EXIT_FAILURE'.

2010-02-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Presume availability of `vfprintf'.

	* rcslex.c (fvfprintf): Move code in #if has_vfprintf
	block up; delete #else block.
	* conf.sh: Remove checks for `vfprintf', `_doprintf', `_doprnt'.

2010-02-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Assume `malloc' returns `void *'.

	* rcsbase.h: Do s/malloc_type/void */g.
	* rcsfnms.c: Likewise.
	* rcsutil.c: Likewise.
	* conf.sh: Remove check for `malloc' rv type.

2010-02-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Assume `closedir' (from <dirent.h>) returns `int'.

	* rcsclean.c [HAVE_DIRENT_H]: #include <dirent.h>.
	(get_directory): For both func decl and function definition, move
	out of #if has_dirent block and into "ifdef HAVE_DIRENT_H" block.
	Also, assume unconditionally that `closedir' returns `int'.
	(main): Use #ifdef HAVE_DIRENT_H instead of #if has_dirent.
	* conf.sh: Remove checks for <dirent.h>, `closedir' rv.

2010-02-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Presume availability of `memcmp', `memcpy', `memmove'.

	* rcsedit.c (movelines): Move #define to top-level out of
	"#if has_memmove" block, deleting the #else /*!has_memmove */ block.
	* rcsutil.c [!has_memcmp] (memcmp): Delete func.
	[!has_memcpy] (memcpy): Likewise.
	* conf.sh: Remove checks for `memcmp', `memcpy', `memmove'.
